--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-</head>
-<body>
-    <img src="./images/logo.png" alt="">
-    Welcome to Itthynk smart register
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title></title>
+  </head>
+  <body >
+    <header id="showcase">
+      <h1>Welcome to ITTHYNK Bootcamp register</h1>
+
+      <div id="butn">
+	<button type="button home-button" id="button1" >Sign Up</button>
+	<button type="button contact-button" id="button2">Login</button>
+<div>
+    </header>
+  </body>
 </html>
